<resources>
    <string name="app_name">OnlineGet\nSeller</string>
    <string name="title_order">Order</string>
    <string name="title_product">Product</string>
    <string name="title_report">Report</string>
    <string name="title_settting">Setting</string>


    <string name="facebook_app_id">2361480910609785</string>
    <string name="fb_login_protocol_scheme">fb2361480910609785</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emty_data_text">There nothing here yet!</string>
    <string name="title_item">Title here</string>
    <string name="status_item">Status</string>
    <string name="count_item">10 orders</string>
    <string name="category_item"><![CDATA[Category > Sub-Category > MainCategory]]></string>
    <string name="des_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_addproduct">Post</string>
    <string name="hint_product_name">Product name</string>
    <string name="text_btn_category">Category</string>
    <string name="hint_product_brand">Product brand</string>
    <string name="hint_product_qty">QTY</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_model">Product model</string>
    <string name="text_btn_add_photo">Add Photo</string>
    <string name="hint_product_video">Video URL</string>
    <string name="hint_product_des">Product desciption</string>
    <string name="text_btn_post_product">Post</string>
    <string name="text_btn_brand">Product brand</string>
    <string name="text_btn_model">Product model</string>
    <string name="hint_qty">Qty</string>
    <string name="text_btn_supplier">Product supplier</string>
    <string name="text_btn_unit">Product unit</string>
    <string name="text_btn_profile">User Info</string>
    <string name="text_btn_shop">Shop Info</string>
    <string name="text_btn_sale_on_onlineget">Sale on onlineget</string>
    <string name="text_btn_about">About Us</string>
    <string name="text_btn_privacy">Policy</string>
    <string name="text_view_username">Username</string>
    <string name="text_view_shopname">User Shopname</string>
    <string name="text_btn_shopname">User Shopname</string>
    <string name="text_view_accinfo">Account Info</string>
    <string name="text_btn_username">Username</string>
    <string name="text_btn_email">justin.bieber@gmail.com</string>
    <string name="text_btn_phone">+855 96 35 48 405</string>
    <string name="text_btn_address">Wat Vongkut Borey, St 2002, Phnom Penh</string>
    <string name="text_view_Setting">Setting</string>
    <string name="text_btn_logout">logout</string>
    <string name="text_view_pending">Pending</string>
    <string name="hint_edit">Edit field</string>
    <string name="text_view_help_edit">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="text_btn_done">Done</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="text_btn_login">Login</string>
    <string name="text_btn_password">Change password</string>
    <string name="text_view_shopinfo">Shop info</string>
    <string name="text_btn_shopemail">example.shop@google.com</string>
    <string name="text_btn_shopphone">+855 12 35 48 65</string>
    <string name="text_category">Category name</string>
    <string name="select_category">Category</string>
    <string name="text_btn_save">Save</string>
    <string name="hint_password_new">New password</string>
    <string name="hint_password_old">Old password</string>
    <string name="text_btn_des">Description</string>
    <string name="time_item">2019-08-31 10:00:44</string>
    <string name="text_view_email">Email : example@gmail.com</string>
    <string name="text_view_order_qty">Order qty : 10</string>
    <string name="denied">Denied</string>
    <string name="title_back">Back</string>
    <string name="text_btn_product_name">Product name</string>
    <string name="text_btn_product_qty">Product qty</string>
    <string name="text_btn_product_price">Product price</string>
    <string name="text_btn_product_category">Product category</string>
    <string name="text_btn_product_brand">Product brand</string>
    <string name="text_btn_product_supplier">Product supplier</string>
    <string name="text_btn_product_unit">Product unit</string>
    <string name="text_btn_product_video">Product video</string>
    <string name="text_btn_product_des">Product description</string>
    <string name="text_btn_delete">Delete</string>
    <string name="text_btn_forgetpassword">forget password!</string>
    <string name="text_btn_verify">Verify</string>
</resources>
