<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/background_item"
    android:orientation="horizontal"
    android:padding="10dp">


    <ImageView
        android:layout_centerVertical="true"
        android:id="@+id/img_thumbnail_product"
        android:layout_width="@dimen/img_all"
        android:layout_height="@dimen/img_all"
        android:src="@drawable/ic_launcher_background" />

    <ImageButton
        android:id="@+id/more_option"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:background="@color/colorTransparent"
        android:src="@drawable/ic_more_vert_black_24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/img_thumbnail_product"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_item"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/title_item" />

        <TextView
            android:id="@+id/text_item_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/count_item" />

        <TextView
            android:id="@+id/text_time_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/time_item" />
    </LinearLayout>
</RelativeLayout>