<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorBackground"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/colorBackground"
            android:orientation="vertical"
            android:paddingHorizontal="25dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/hint_edit"
                app:counterMaxLength="450"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="450" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/text_view_help_edit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_done"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_btn_done"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>